# WEB

CleaningSite/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
CleaningSite/articles/: admin.py  models.py  urls.py  views.py
CleaningSite/articles/migrations/: 0001_initial.py
CleaningSite/cleaning_service/: asgi.py  settings.py  urls.py  wsgi.py
CleaningSite/clients/: admin.py  forms.py  models.py  service.py  urls.py  views.py
CleaningSite/clients/migrations/: 0001_initial.py  0002_clientinfo_check_juridical_status.py  0003_alter_clientinfo_company_name_and_more.py  (+4 more)
CleaningSite/companies/: admin.py  forms.py  models.py
CleaningSite/employee_specializations/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
CleaningSite/employees/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
CleaningSite/feedbacks/: admin.py  forms.py  models.py  urls.py  views.py
CleaningSite/main/: urls.py  views.py
CleaningSite/news/: admin.py  models.py  urls.py  views.py
CleaningSite/orders/: admin.py  forms.py  models.py  service.py  urls.py  views.py
CleaningSite/promocodes/: admin.py  models.py  urls.py  views.py
CleaningSite/questions/: admin.py  forms.py  models.py  urls.py  views.py
CleaningSite/service_types/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
CleaningSite/services/: admin.py  diagram.py  forms.py  models.py  service.py  statistic_service.py  urls.py  utils.py  views.py
CleaningSite/templates/: base.html
CleaningSite/vacancies/: admin.py  models.py  urls.py  views.py
(+162 files in other folders)
